rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word_shape__tests__word_join_pos_first.snap
---
source: src/tokenization/word_shape.rs
expression: w1.join(&w2)
---
WordShape {
    offset: 0,
    slice: (
        0,
        13,
    ),
    stem: 13,
    pos: None,
    fin: true,
}
