rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word_shape__tests__word_lower.snap
---
source: src/tokenization/word_shape.rs
expression: word
---
WordShape {
    ix: 0,
    place: (
        0,
        15,
    ),
    stem: 15,
    pos: None,
    fin: true,
}
