rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word_shape__tests__word_strip.snap
---
source: src/tokenization/word_shape.rs
expression: "&word"
---
WordShape {
    ix: 0,
    place: (
        1,
        4,
    ),
    stem: 6,
    pos: None,
    fin: true,
}
