rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word_shape__tests__word_strip_empty.snap
---
source: src/tokenization/word_shape.rs
expression: word
---
WordShape {
    offset: 0,
    slice: (
        3,
        3,
    ),
    stem: 3,
    pos: None,
    fin: true,
}
